2009-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* error.h: ErrorEventArg: Add accessors that can be pinvoked.

	* cbinding.cpp|h: Regenerated.

2009-07-15  Alan McGovern  <amcgovern@novell.com>

	* control.cpp: When the focused control is disabled, tab to
	  the next suitable control.

2009-07-15  Alan McGovern  <amcgovern@novell.com>

	* runtime.h:
	* runtime.cpp: Implement the default autofocusing behaviour
	  which silverlight exhibits. Apparently if the root control
	  is focused, silverlight will keep attempting to focus a
	  child of that control until it succeeds. Once a child
	  control is focused, the focus changed events are emitted
	  immediately, ignoring the usual focusing rules. Fixes DRT
	  323.

2009-07-15  Alan McGovern  <amcgovern@novell.com>

	* uielement.cpp: When clearing the Loaded flag on a UIElement,
	  we should clear the flag on all visual children too.

2009-07-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* audio.cpp: Ref when we're supposed to ref. Fixes a crash.

2009-07-14  Larry Ewing  <lewing@novell.com>

	* panel.cpp (OnPropertyChanged): make sure we invalidate the panel
	bounds when the bg changes.  Fixes 641

2009-07-14  Larry Ewing  <lewing@novell.com>

	* border.cpp (OnSubPropertyChanged): elements must listen to
	subproperty changes for brushes.  Fixes 2020

2009-07-14  Alan McGovern  <amcgovern@novell.com>

	* tabnavigationwalker.cpp: If TabNavagationWalker::Focus () is
	  called on a Control with the 'Cycle' navigation mode and
	  none of the children of that node can be tabbed to, then
	  focus remains on that control.

2009-07-13  Jeffrey Stedfast  <fejj@novell.com>

	* fonts.cpp (TextFont::Load): Don't g_strfreev() the families
	string array until after we've finished using the hash
	table. Prevents FMRs.

2009-07-13  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Don't allow setting x:Name and Name on the same
	element
	- Raise an error if we try to set a property to an incompatible
	type.
